--- a/src/main/resources/templates/users/detail.mustache
+++ b/src/main/resources/templates/users/detail.mustache
@@ -26,4 +26,5 @@
 <a href="/users">회원목록</a>
 <a href="/users/{{user.id}}/edit">회원수정</a>
 <a href="/users/{{user.id}}/delete" class="btn btn-danger">회원탈퇴</a>
+<a href="/">시작페이지</a>
 {{>layouts/footer}}
