feat: comment crud

--- a/src/main/resources/templates/index.mustache
+++ b/src/main/resources/templates/index.mustache
@@ -6,4 +6,5 @@
 <a href="/blogs">블로그목록</a><br>
 <a href="/posts/new">포스트 만들기</a>
 <a href="/posts">포스트목록</a><br>
+<a href="/category/new">카테고리 만들기</a>
 {{>layouts/footer}}
