--- a/src/main/resources/templates/posts/detail.mustache
+++ b/src/main/resources/templates/posts/detail.mustache
@@ -29,5 +29,7 @@
 <a href="/posts/{{post.id}}/edit">포스트 수정</a>
 <a href="/posts/{{post.id}}/delete" class="btn btn-danger">포스트 삭제</a>
 <a href="/posts">포스트 목록</a>
+<a href="/posts/{{post.id}}/comments/new">댓글 작성</a>
+<a href="/posts/{{post.id}}/comments">댓글 보기</a>
 <a href="/">시작페이지</a>
 {{>layouts/footer}}
