feat: category crud

--- a/src/main/resources/templates/categorys/new.mustache
+++ b/src/main/resources/templates/categorys/new.mustache
@@ -1,9 +1,9 @@
 {{>layouts/header}}
-<form action="/category/new" method="post">
+<form action="/categorys/new" method="post">
     <div>
         <label class="form-label">카테고리명</label>
         <label>
-            <input type="text" name="category">
+            <input type="text" name="category_name">
         </label>
     </div>
     <button type="submit" class="btn btn-primary">Submit</button>
